--- a/sanpasjs/Cargo.toml
+++ b/sanpasjs/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
 logos = "0.12.1"
+
+[profile.release]
+lto = true
+codegen-units = 1
